#


###############################################################################
###############################################################################
##
## CVS HEAD
##
###############################################################################
###############################################################################


=head1 CVS HEAD

=head2 29 Dec 1999 - Omer

Win32:

=over 4

=item * Works. :)

=item * Makes use of system registry

=item * execute_complex_command()

=item * get_hostname()

=item * get_all_users()

=item * get_home_dir()

=item * get_known_hosts()

=back


=head2 29 Dec 1999 - warp

New Features:

=over 4

=item *

Saving the history file now respects $Psh::history_size if
Term::ReadLine::Perl is used

=item *

 Manifest Filters for pipeline code, e.g. try:

   ls | s/a/b/
   (runs replacement over output of previous program and prints it)
    or
    ls | { print ++$i, ": $_"; }q
    ( runs the code in braces in an iteration over each line of
    the output unmodified)
    or
    netstat | { $_[1]>2; }g
    ( runs ins "grep" mode - line will only be printed if expression
    evaluates to true. @_ is set to the line split with \s+,
    $_ is the line)

=back


=head2 28 Dec 1999 - warp

New Features:

=over 4

=item *

New recursive globbing using **/ (Example: grep anything **/*.pm )

=back

Internal:

=over 4

=item * Moved prompt code and perl evaluation code into own packages

=item * Implementing redirects and pipes in psh

=item * Clean-ups for all code using filenames (now using File::Spec)

=item * More I18N

=item * Removed usage of ENV{HOME} in portable code

=back


=cut


###############################################################################
###############################################################################
##
## 0.005
##
###############################################################################
###############################################################################

