@@ -1,3 +1,9 @@
+2000-01-01
+
+  * Unify builtin's usage_ error messages with help builtin and make
+    the help messages translatable. Seriously think about avoiding
+	to hold all error texts in memory all the time. [warp]
+
 1999-12-26
 
   * Investigate the relationship between the Perl Power Tools project
